# ricbot_navigation

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
docker/: Dockerfile
launch/: nav2_bringup.launch.py  ricbot_nav.launch.py
lib/mapdesc_msgs/msg/: LaneNode.msg
lib/mapdesc_msgs/srv/: MapExtList.srv  MapMarkerDelete.srv  MapPathList.srv  MapPathUpdate.srv  MapWallCreate.srv
lib/mapdesc_ros/: .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile-ros-pip-pytest  Dockerfile_dev  README.md  compose.yml  roscrud.yml  run_tests.bash  test_docker.bash
lib/mapdesc_ros/.devcontainer/: devcontainer.json
lib/mapdesc_ros/mapdesc/: .coveragerc  .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  LICENSE  README.md  clear_test.bash  compose.yml  manifest.xml  pytest.bash  requirements.txt  setup.py  test_cli.bash
lib/mapdesc_ros/mapdesc/.devcontainer/: devcontainer.json
lib/mapdesc_ros/mapdesc/doc/tutorials/: 01_basic_tutorial.md  02_basic_api_usage.md  03_import_path.md
lib/mapdesc_ros/mapdesc/docker/: Dockerfile
lib/mapdesc_ros/mapdesc/mapdesc/: __init__.py  cli.py  geo_data.py  util.py
lib/mapdesc_ros/mapdesc/mapdesc/data/: README.md
lib/mapdesc_ros/mapdesc/mapdesc/data/templates/: model.config.j2  model.sdf.j2
lib/mapdesc_ros/mapdesc/mapdesc/load/: __init__.py  geojson.py  osm.py  rosmap.py  sdf.py  yaml.py
lib/mapdesc_ros/mapdesc/mapdesc/model/: __init__.py  area.py  ext.py  lane.py  map.py  marker.py  path.py  wall.py
lib/mapdesc_ros/mapdesc/mapdesc/model/geom/: __init__.py  box.py  capsule.py  cylinder.py  dimension.py  mesh.py  plane.py  pose.py  quaternion.py  sphere.py  vector2.py  vector3.py
lib/mapdesc_ros/mapdesc/mapdesc/save/: __init__.py  png.py  rosmap.py  sdf.py  svg.py  yaml.py
lib/mapdesc_ros/mapdesc/test/: test_conversions.py  test_dimension.py  test_lanes.py  test_load_save.py  test_map.py  test_mesh.py  test_plane.py  test_pose.py  test_quaternion.py  test_serialization.py  test_utils.py  test_vec2.py  test_vec3.py  test_wall.py  test_yaml_import.py
lib/mapdesc_ros/mapdesc/test/geojson/: geojson_drone.json
lib/mapdesc_ros/mapdesc/test/simple_walls_sdf/: model.config  model.sdf
lib/mapdesc_ros/mapdesc/test/yaml/: demonstrator_map.yml  hdp_2_agents_map.yml  simple_walls.yaml
lib/mapdesc_ros/mapdesc_msgs/: CMakeLists.txt  README.md  package.xml
lib/mapdesc_ros/mapdesc_msgs/msg/: Area.msg  Box.msg  Dimension.msg  External.msg  LaneEdge.msg  LaneGraph.msg  Map.msg  Marker.msg  Mesh.msg  Path.msg  Wall.msg
lib/mapdesc_ros/mapdesc_msgs/srv/: MapAreaCreate.srv  MapAreaDelete.srv  MapAreaList.srv  MapAreaUpdate.srv  MapCreate.srv  MapDelete.srv  MapExtCreate.srv  MapExtDelete.srv  MapExtUpdate.srv  MapGet.srv  MapList.srv  MapMarkerCreate.srv  MapMarkerList.srv  MapMarkerUpdate.srv  MapPathCreate.srv  MapPathDelete.srv  MapUpdate.srv  MapWallDelete.srv  MapWallList.srv  MapWallUpdate.srv
lib/mapdesc_ros/mapdesc_ros/: package.xml  pytest.ini  setup.cfg  setup.py
lib/mapdesc_ros/mapdesc_ros/integration_tests/data/: simple_marker_map.yml
lib/mapdesc_ros/mapdesc_ros/integration_tests/launch_testing/: marker_launch_test.py
lib/mapdesc_ros/mapdesc_ros/launch/: mapdesc.launch.py
lib/mapdesc_ros/mapdesc_ros/mapdesc_ros/: convert_data.py  map_desc.py  node.py
lib/mapdesc_ros/mapdesc_ros/test/: test_mapdesc_service.py
maps/: rh1_eg_map.yaml  rh1_et1_map.yaml
ricbot_navigation/: marker_info.py  nav_node.py  node.py
