<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ricbot_navigation</name>
  <version>0.0.1</version>
  <description>ROS 2 RICBot Navigation package</description>
  <maintainer email="andreas.bresser@dfki.de">Andreas Bresser</maintainer>
  <license>BSD-3</license>
  <author>Andreas Bresser</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>